--- a/src/app/credit/credit.component.html
+++ b/src/app/credit/credit.component.html
@@ -9,22 +9,24 @@
 
 <body>
     <div class="container">
-        <h1>Liste de Credit</h1>
+        <h1>Liste de Credits</h1>
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>Date</th>
                     <th>Type</th>
                     <th>Montant</th>
+
 
                 </tr>
             </thead>
             <tbody *ngFor="let item of credit">
                 <tr>
+                    <td>{{item.id}}</td>
                     <td>{{item.date}}</td>
                     <td>{{item.type}}</td>
                     <td>{{item.montant}}</td>
-
                 </tr>
             </tbody>
         </table>
@@ -37,19 +39,22 @@
 
                 <div class="form-group">
                     <label>Montant:</label>
-                    <input name="montant" type="number" class="form-control" placeholder="Montant" ngModel
+                    <input name="montant" type="number" class="form-control" #montant="ngModel"
+                        [class.is-invalid]="montant.invalid && montant.touched" required placeholder="Montant" ngModel
                         [(ngModel)]="crdt.montant">
                 </div>
 
                 <div class="form-group">
                     <label>Type:</label>
-                    <input name="type" type="email" class="form-control" placeholder="Type" ngModel
+                    <input name="type" type="email" class="form-control" #type="ngModel"
+                    [class.is-invalid]="type.invalid && type.touched" required placeholder="Type" ngModel
                         [(ngModel)]="crdt.type">
                 </div>
 
                 <div class="form-group">
                     <label>Date:</label>
-                    <input name="date" type="date" class="form-control" placeholder="Date" ngModel
+                    <input name="date" type="date" class="form-control" #date="ngModel"
+                    [class.is-invalid]="date.invalid && date.touched" required placeholder="Date" ngModel
                         [(ngModel)]="crdt.date">
                 </div>
 
