--- a/src/app/credit/credit.component.html
+++ b/src/app/credit/credit.component.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    
+
     <div class="container">
         <h1>Liste de Credits</h1>
         <table class="table table-striped">
@@ -42,21 +42,33 @@
                     <label>Montant:</label>
                     <input name="montant" type="number" class="form-control" #montant="ngModel"
                         [class.is-invalid]="montant.invalid && montant.touched" required placeholder="Montant" ngModel
-                        [(ngModel)]="crdt.montant">
+                        [(ngModel)]="crdt.montant" pattern="^\d{8,10}$">
+
+                    <div *ngIf="montant.errors && montant.touched">
+                        <small class="text-danger" *ngIf="montant.errors['required']">Montant est
+                            obligatoire</small>
+
+                        <small class="text-danger" *ngIf="montant.errors['pattern']">Entre 8 et 10 caracteres
+                        </small>
+                    </div>
                 </div>
 
                 <div class="form-group">
                     <label>Type:</label>
                     <input name="type" type="email" class="form-control" #type="ngModel"
-                    [class.is-invalid]="type.invalid && type.touched" required placeholder="Type" ngModel
+                        [class.is-invalid]="type.invalid && type.touched" required placeholder="Type" ngModel
                         [(ngModel)]="crdt.type">
+                    <small class="text-danger" [class.d-none]="type.valid || type.untouched">Type est
+                        obligatoire</small>
                 </div>
 
                 <div class="form-group">
                     <label>Date:</label>
                     <input name="date" type="date" class="form-control" #date="ngModel"
-                    [class.is-invalid]="date.invalid && date.touched" required placeholder="Date" ngModel
+                        [class.is-invalid]="date.invalid && date.touched" required placeholder="Date" ngModel
                         [(ngModel)]="crdt.date">
+                    <small class="text-danger" [class.d-none]="date.valid || date.untouched">Date est
+                        obligatoire</small>
                 </div>
 
                 <div class="form-group">
